# abd-vro

./: .codeclimate.yml  .coveragerc  .djlintrc  .dockerignore  .flake8  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Audit.md  Dockerfile  MAS End to End Process.md  README.md  RunningKubernetesLocal.md  build-images.sh  build.gradle  claimevidence_1.1.1_openapi.json  claimsecret.txt  deploy-all-secrets.sh  deploy-app.sh  deploy-qa-from-dev.sh  deploytest.sh  docker-compose.yml  evidencesecret.txt  gradle.properties  lombok.config  mkdocs.yml  openapi.json  promote-and-deploy.sh  runnow.sh  settings.gradle  setup.cfg  versions.txt
.circleci/: config.yml
.github/: CODEOWNERS  dependabot.yml  emass.json  pull_request_template.md
api/: build.gradle
api-gateway/: README.md  build.gradle  gradle.properties
app/: Dockerfile  build.gradle  docker-compose.yml  docker-entrypoint.sh  gradle.properties  spectral.yaml
buildSrc/: Dockerfile-jre  build.gradle  entrypoint-default.sh
catalog/: catalog-all.yaml  catalog-api.yaml  catalog-info.yaml
cdw-scripts/: bp-all.sql  encounter-dxs-for-patients.sql  patient-info.sql  presumptive-exam-cases.sql  presumptive-exam-with-enc-dx.sql  presumptive-rfd-no-enc-dx.sql
console/: Dockerfile  README.md  build.gradle  gradle.properties
container-init/: build.gradle
controller/: build.gradle
db-init/: Dockerfile  build.gradle  docker-entrypoint.sh
dev-tools/: Dockerfile  build.gradle
docs/: README.md  quickstart.md  reference.md
domain/: build.gradle
domain-bie-events/: .pre-commit-config.yaml  docker-compose.yml
domain-cc/: .pre-commit-config.yaml  README.md  apply_database_migrations.py  build.gradle  docker-compose.yml
domain-ee/: .pre-commit-config.yaml  README.md  build.gradle  docker-compose.yml
domain-rrd/: README.md  gradle.properties  scrap-docker-compose.rrd.yml
domain-xample/: build.gradle  docker-compose.yml  gradle.properties  settings.gradle
gradle-plugins/: README.md  build.gradle
helm-app/: .helmignore  Chart.yaml  dev.yaml  values.yaml
helm-domaincc/: Chart.yaml  values.yaml
helm-service-core/: Chart.yaml  values.yaml
shared/lib-hoppy/: pyproject.toml  setup.py
shared/lib-hoppy/hoppy/: __init__.py  async_consumer.py  async_hoppy_client.py  async_publisher.py  base_channel_opener.py  base_exchange_declarer.py  base_queue_client.py  base_queue_declarer.py  channel.py  config.py  exception.py  hoppy_properties.py  mq.py  util.py
shared/lib-hoppy/integration/: channel_test.py  event_loop_test.py
shared/lib-hoppy/test/: async_hoppy_client_test.py  event_loop_test.py
vro-streamlit/: Dockerfile  README.md  README.md.bak  build.gradle  docker-entrypoint.sh  getting_started.md  gradle.properties  pyproject.toml
vro-streamlit/end_to_end/: test_end_to_end.py
vro-streamlit/integration/: test_integration.py
vro-streamlit/src/: dev-requirements.txt  requirements.txt
vro-streamlit/src/app/: app.py  config.py  main.py
vro-streamlit/src/app/.streamlit/: config.toml
vro-streamlit/src/app/pages/: 1_Text.py  2_Dataframes.py  3_Water_Quality.py
vro-streamlit/src/vro_streamlit/: main.py
vro-streamlit/src/vro_streamlit/auth/: auth_service.py  user.py
vro-streamlit/src/vro_streamlit/directory/: home.py
vro-streamlit/src/vro_streamlit/directory/bie_events/: claim_events.py  contention_events.py
vro-streamlit/src/vro_streamlit/directory/examples/: dataframes.py  text.py  water_quality.py
vro-streamlit/src/vro_streamlit/service/: database.py
vro-streamlit/test/: __init__.py  conftest.py  test_app.py  test_main.py  util.py
vro-streamlit/test/directory/: test_home.py
(+3788 files in other folders)
