[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hoppy"
description = "Python library for building VRO microservices that need to interact with Rabbit MQ"
requires-python = ">=3.6"
dependencies = [
    "pika",
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "pytest-timeout"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "hoppy.__version__" }

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "-rfesp"
]
testpaths = [
    "tests"
]
timeout=5