[build-system]
requires = ["setuptools >= 70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hoppy"
description = "Python library for building asynchrounous REST-like clients that perform requests and receive responses over Rabbit MQ"
requires-python = ">= 3.10"
dependencies = [
    "pika",
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "pytest-env",
    "pytest-timeout"
]
dynamic = ["version"]

[tool.setuptools]
packages = ["hoppy"]

[tool.setuptools.dynamic]
version = { attr = "hoppy.__version__" }

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "-rfesp"
]
env = [
    "RABBITMQ_USERNAME=user",
    "RABBITMQ_PASSWORD=bitnami"
]
testpaths = [
    "test",
    "integration" # depends on rabbitmq-service
]
timeout = 5
